Refatoração do código e reorganização de pacotes